@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --tests-base=tests --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt gettext glob lib-ignore lock memcmp minmax mkdtemp mkstemp regex rename setenv sigaction signal sigprocmask strcspn strerror strsep strsignal sys_select unsetenv xalloc xgetcwd xstrndup xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --tests-base=tests --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt-gnu gettext glob lib-ignore lock memcmp minmax mkdtemp mkstemp regex rename setenv sigaction signal sigprocmask strcspn strerror strsep strsignal sys_select unsetenv xalloc xgetcwd xstrndup xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits subdir-objects
 
