@@ -15,7 +15,7 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --tests-base=tests --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt gettext glob lib-ignore lock memcmp minmax mkdtemp mkstemp regex rename setenv sigaction signal sigprocmask strcspn strerror strsep strsignal sys_select unsetenv xalloc xgetcwd xstrndup xvasprintf
+#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --tests-base=tests --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt-gnu gettext glob lib-ignore lock memcmp minmax mkdtemp mkstemp regex rename setenv sigaction signal sigprocmask strcspn strerror strsep strsignal sys_select unsetenv xalloc xgetcwd xstrndup xvasprintf
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_LOCAL_DIR([])
@@ -26,7 +26,7 @@ gl_MODULES([
   dirname
   error
   fnmatch-gnu
-  getopt
+  getopt-gnu
   gettext
   glob
   lib-ignore
