@@ -1,3 +1,7 @@
+Mon Feb  8 04:29:42 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib: Import getopt-gnu module rather than the obsolete getopt.
+
 Mon Feb  1 12:18:36 PST 2010  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipeline_wait): Don't bother printing error
